--- a/content/blog/can-debezium-lose-events.asciidoc
+++ b/content/blog/can-debezium-lose-events.asciidoc
@@ -71,4 +71,4 @@ By means of the https://debezium.io/documentation/reference/stable/connectors/po
 
 In general though, you should avoid this situation to begin with, and have observability tools in place which will trigger an alert when a Debezium connector isn't running for a longer period of time,
 for instance by querying the Kafka Connect REST API.
-For Postgres, you also can track the retained WAL size of a replication slot using the `pg_current_wal_lsn()` and `pg_wal_lsn_diff()` functions, as I described in https://www.decodable.co/blog/the-wonders-of-postgres-logical-decoding-messages-for-cdc[this blog post] a while ago.
+For Postgres, you also can track the retained WAL size of a replication slot using the `pg_current_wal_lsn()` and `pg_wal_lsn_diff()` functions, as I described in https://www.infoq.com/articles/wonders-of-postgres-logical-decoding-messages/[this blog post] a while ago.
