--- a/content/blog/failover-replication-slots-with-postgres-17.asciidoc
+++ b/content/blog/failover-replication-slots-with-postgres-17.asciidoc
@@ -32,8 +32,8 @@ Otherwise you might have missed change events occurring after reading from the s
 
 Whilst external tools such as link:https://github.com/EnterpriseDB/pg_failover_slots[pg_failover_slots] were added over time, a built-in solution for failing over replication slots from one Postgres node to another was sorely missed by many users.
 This situation substantially improved with the release of Postgres 16, which brought support for setting up replication slots on read replicas.
-I've discussed this feature in great detail in link:https://www.decodable.co/blog/logical-replication-from-postgres-16-stand-by-servers-part-1-of-2[this post].
-Back then, link:https://www.decodable.co/blog/logical-replication-from-postgres-16-stand-by-servers-part-2-of-2[I also explored] how to use replication slots on replicas for manually implementing replication slot failover.
+I've discussed this feature in great detail in link:/blog/stand-by-servers-for-postgres-logical-replication[this post].
+Back then, link:/blog/logical-replication-from-postgres-stand-by-servers-debezium-and-failover-slots[I also explored] how to use replication slots on replicas for manually implementing replication slot failover.
 But the good news is, as of Postgres version 17, all this is not needed any longer, as it finally supports failover slots out of the box!
 
 link:https://www.postgresql.org/docs/current/logical-replication-failover.html[Failover slots] are replication slots which are created on the primary node and which are propagated automatically to read replicas.
