--- a/content/blog/get-running-with-apache-flink-on-kubernetes-1.asciidoc
+++ b/content/blog/get-running-with-apache-flink-on-kubernetes-1.asciidoc
@@ -364,7 +364,7 @@ Finally, to delete the job, run the following:
 $ kubectl delete FlinkDeployment basic-example
 ----
 Besides Java, you can also implement your streaming processing jobs using Flink's Python API, PyFlink.
-Refer to link:https://www.decodable.co/blog/getting-started-with-pyflink-on-kubernetes[this post] for learning how to get started with running your first PyFlink jobs on Kubernetes.
+Refer to link:/blog/getting-started-with-pyflink-on-kubernetes[this post] for learning how to get started with running your first PyFlink jobs on Kubernetes.
 
 
 == Building Custom Job Images
