--- a/content/blog/mastering-postgres-replication-slots.asciidoc
+++ b/content/blog/mastering-postgres-replication-slots.asciidoc
@@ -187,7 +187,7 @@ CREATE PUBLICATION mypublication
     FOR TABLE customers WHERE (is_test_account IS FALSE);
 ----
 
-Row filters can come in very handy to exclude portions of the operational data set from replication, for example test data or logically deleted data. You can learn more about row filters in https://www.decodable.co/blog/postgres-15-logical-decoding-row-filters-with-debezium[this post] I wrote after Postgres 15 was released.
+Row filters can come in very handy to exclude portions of the operational data set from replication, for example test data or logically deleted data. You can learn more about row filters in link:/blog/postgres-15-logical-decoding-row-filters-with-debezium[this post] I wrote after Postgres 15 was released.
 
 When using the snapshotting feature of Debezium--which retrieves rows not via logical replication but by scanning the actual tables in the database--you should specify the same filter expression via the https://debezium.io/documentation/reference/stable/connectors/postgresql.html#postgresql-property-snapshot-select-statement-overrides[`snapshot.select.statement.overrides`] option in order to ensure consistency between snapshotting and streaming events.
 
@@ -195,7 +195,7 @@ When using the snapshotting feature of Debezium--which retrieves rows not via lo
 
 A long-standing shortcoming of logical replication in Postgres used to be the lack of fail-over support. Until relatively recently, replication slots could only be created on primary instances. If you had set up a Postgres cluster comprising a primary server and a read replica, logical replication couldn't resume from the replica after promoting it to primary in case of a failure. Instead, you'd typically have to create a new replication slot, which also meant starting with a new initial snapshot if writes could occur on the new primary before creating a new replication slot.
 
-Luckily, over the last few Postgres versions, this issue finally got addressed. In Postgres 16, support for creating replication slots on replicas was added. While not solving the failover problem directly, this is a substantial improvement, as it allows you to have slots on primary and standby servers and manually keep them in sync. To do so, you need to track the progress of the primary slot and move the slot on the stand-by forward accordingly with the help of the https://www.postgresql.org/docs/current/functions-admin.html#FUNCTIONS-REPLICATION[`pg_replication_slot_advance()`] function. I wrote about this topic in https://www.decodable.co/blog/logical-replication-from-postgres-16-stand-by-servers-part-2-of-2[this post] a while ago. 
+Luckily, over the last few Postgres versions, this issue finally got addressed. In Postgres 16, support for creating replication slots on replicas was added. While not solving the failover problem directly, this is a substantial improvement, as it allows you to have slots on primary and standby servers and manually keep them in sync. To do so, you need to track the progress of the primary slot and move the slot on the stand-by forward accordingly with the help of the https://www.postgresql.org/docs/current/functions-admin.html#FUNCTIONS-REPLICATION[`pg_replication_slot_advance()`] function. I wrote about this topic in link:/blog/logical-replication-from-postgres-stand-by-servers-debezium-and-failover-slots/[this post] a while ago.
 
 Postgres 17 finally added full https://www.postgresql.org/docs/current/logical-replication-failover.html[support for failover slots]. It now can automatically sync the status of a replication slot on a standby server with a slot on the primary, without requiring any manual intervention whatsoever. After failover, consumers can continue to read from the slot on the newly promoted primary, without missing any events, or facing a large amount of duplicate events (some duplicates are to be expected in case the consumer has fetched events from the slot on the primary and a failover happens before the slot state could be updated accordingly on the replica server). To enable failover slots, a bit of configuration is required.
 
@@ -210,13 +210,13 @@ And on the stand-by server:
 * Add the slot's database name to the connection string used for connecting to the primary server (https://postgresqlco.nf/doc/en/param/primary_conninfo/[`primary_conninfo`]), e.g. `…dbname=inventorydb`; If you are using Postgres on Amazon RDS, specify the database name instead using the option https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Appendix.PostgreSQL.CommonDBATasks.pglogical.slot.synchronization.html[`rds.logical_slot_sync_dbname`] 
 * Set the option https://postgresqlco.nf/doc/en/param/hot_standby_feedback/[`hot_standby_feedback`] to true
 
-If you connect to Postgres through a proxy, for instance https://www.pgbouncer.org/[pgbouncer], promoting a replica to primary can be made fully transparent to your replication consumers such as Debezium, seamlessly continuing to process any change events after a failover. You can find a complete example for doing so in https://www.decodable.co/blog/failover-replication-slots-with-postgres-17[this blog post].
+If you connect to Postgres through a proxy, for instance https://www.pgbouncer.org/[pgbouncer], promoting a replica to primary can be made fully transparent to your replication consumers such as Debezium, seamlessly continuing to process any change events after a failover. You can find a complete example for doing so in link:/blog/failover-replication-slots-with-postgres-17[this blog post].
 
 == Consider Using Replica Identity FULL
 
 In Postgres, a table's replica identity determines which fields of a row will be written to the WAL for the old row image for update and delete events. By default, the old value will be only recorded for primary columns. In addition, the value of any https://www.postgresql.org/docs/current/storage-toast.html[TOAST] columns will only be contained in the new row image if their value changed.
 
-These peculiarities can make change events somewhat difficult and complex to process for consumers. When performing incremental stream processing on a change event stream, the missing old row image (the `before` part of Debezium change events), requires a https://www.linkedin.com/posts/gunnar-morling_debezium-activity-7305948780120453120-ybxZ/[costly state materialization operation]. Due to values for unchanged TOAST columns being absent from update events (represented by Debezium with a special value, `__debezium_unavailable_value`), consumers cannot apply such a change event with simple upsert semantics (I've discussed a potential solution for backfilling missing TOAST values via Apache Flink https://www.morling.dev/blog/backfilling-postgres-toast-columns-debezium-change-events/[here]).
+These peculiarities can make change events somewhat difficult and complex to process for consumers. When performing incremental stream processing on a change event stream, the missing old row image (the `before` part of Debezium change events), requires a https://www.linkedin.com/posts/gunnar-morling_debezium-activity-7305948780120453120-ybxZ/[costly state materialization operation]. Due to values for unchanged TOAST columns being absent from update events (represented by Debezium with a special value, `__debezium_unavailable_value`), consumers cannot apply such a change event with simple upsert semantics (I've discussed a potential solution for backfilling missing TOAST values via Apache Flink link:/blog/backfilling-postgres-toast-columns-debezium-change-events/[here]).
 
 To avoid these problems, consider changing the replica identity of your tables from `DEFAULT` to `FULL`:
 
