--- a/content/blog/stand-by-servers-for-postgres-logical-replication.asciidoc
+++ b/content/blog/stand-by-servers-for-postgres-logical-replication.asciidoc
@@ -40,7 +40,7 @@ When it comes to replication in Postgres, it supports two kinds of continuous re
 
 Logical replication offers a flexible _publish/subscribe_ model, which goes beyond the basic primary/read-replica scheme of physical replication.
 In this model, a _publisher_ node is a Postgres instance which exposes one or more _publications_, describing which tables should be replicated.
-Publications also allow you to limit which columns, link:https://www.decodable.co/blog/postgres-15-logical-decoding-row-filters-with-debezium[rows], and operations (`INSERT`, `UPDATE`, or `DELETE`) should be propagated.
+Publications also allow you to limit which columns, link:/blog/postgres-15-logical-decoding-row-filters-with-debezium[rows], and operations (`INSERT`, `UPDATE`, or `DELETE`) should be propagated.
 Once set up, one or more _subscriber_ nodes retrieve the changes from a publication.
 
 A subscriber can consume the changes from multiple publishers, and it can also be a publisher itself.
