--- a/content/blog/taxonomy-of-data-change-events.asciidoc
+++ b/content/blog/taxonomy-of-data-change-events.asciidoc
@@ -20,7 +20,7 @@ endif::[]
 _This post originally appeared on the link:https://www.decodable.co/blog/taxonomy-of-data-change-events[Decodable blog]. All rights reserved._
 
 Data change events are at the core of Change Data Capture (CDC) solutions such as link:https://debezium.io/[Debezium].
-They describe the changes made to a specific record in a database and allow event consumers to take action based on this information, enabling a wide range of link:/blog/seven-ways-to-put-cdc-to-work[use cases], such as real-time ETL (by propagating the updated data into downstream data stores such as data warehouses, analytics databases, or fulltext search indexes), microservices data exchange, or audit logging.
+They describe the changes made to a specific record in a database and allow event consumers to take action based on this information, enabling a wide range of link:/blog/cdc-use-cases[use cases], such as real-time ETL (by propagating the updated data into downstream data stores such as data warehouses, analytics databases, or fulltext search indexes), microservices data exchange, or audit logging.
 
 <!--more-->
 What is contained within a change event, really?
