--- a/content/blog/stand-by-servers-for-postgres-logical-replication.asciidoc
+++ b/content/blog/stand-by-servers-for-postgres-logical-replication.asciidoc
@@ -54,7 +54,7 @@ Also replicating sequences, (materialized) views, and large objects is currently
 What makes logical replication so interesting, beyond the purposes of just replicating data from one Postgres instance to another, is the notion of link:https://www.postgresql.org/docs/current/logicaldecoding-output-plugin.html[logical decoding] plug-ins.
 They control the data format used for the logical replication messages and allow external (i.e.
 non-Postgres) consumers to subscribe to a replication stream.
-This is how tools such as Debezium implement change data capture (CDC) for Postgres, enabling use cases such as the replication of data to data warehouses and data lakes, cache invalidation, low latency synchronization of search indexes, and link:https://www.decodable.co/blog/seven-ways-to-put-cdc-to-work[many others].
+This is how tools such as Debezium implement change data capture (CDC) for Postgres, enabling use cases such as the replication of data to data warehouses and data lakes, cache invalidation, low latency synchronization of search indexes, and link:/blog/cdc-use-cases[many others].
 
 Having established what logical replication is and why it is such an important part of the data engineering toolbox, let's explore why it is so interesting that Postgres now supports logical replication from stand-by servers and how to set this up.
 
