--- a/content/blog/failover-replication-slots-with-postgres-17.asciidoc
+++ b/content/blog/failover-replication-slots-with-postgres-17.asciidoc
@@ -65,7 +65,7 @@ The prompt has been adjusted to show the current instance.
 To verify you are on the primary and not the replica run the following:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@primary:inventorydb> SELECT * from pg_is_in_recovery();
 +-------------------+
@@ -77,7 +77,7 @@ user@primary:inventorydb> SELECT * from pg_is_in_recovery();
 Both primary and replica are already configured with link:https://postgresqlco.nf/doc/en/param/wal_level/[WAL level] `logical`, as required for logical replication:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@primary:inventorydb> SHOW wal_level;
 +-----------+
@@ -91,7 +91,7 @@ Note that if you are running Postgres on Amazon RDS (where version 17 link:https
 There's a physical replication slot for synchronizing changes from the primary to the replica server:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@primary:inventorydb> WITH node_status AS (
        SELECT
@@ -116,7 +116,7 @@ user@primary:inventorydb> WITH node_status AS (
 This slot must be added to the set of synchronized stand-by slots using the `synchronized_standby_slots` configuration option:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@primary:inventorydb> ALTER SYSTEM SET synchronized_standby_slots='replication_slot';
 user@primary:inventorydb> SELECT pg_reload_conf();
@@ -134,7 +134,7 @@ $ pgcli --prompt "\u@replica:\d> " "postgresql://user:top-secret@localhost:5433/
 As above, verify that you are on the right node indeed:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@primary:inventorydb> SELECT * from pg_is_in_recovery();
 +-------------------+
@@ -148,7 +148,7 @@ In addition, the database name must be added to `primary_conninfo` on the replic
 I couldn't find a way for just adding a single attribute, so I retrieved the current value and added the database name, so that the complete string can be written back (on RDS, that setting can't be changed, instead set the `rds.logical_slot_sync_dbname` parameter to the name of the database):
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@replica:inventorydb> ALTER SYSTEM SET primary_conninfo = 'user=replicator password=''zufsob-kuvtum-bImxa6'' channel_binding=prefer host=postgres_primary port=5432 sslmode=prefer sslnegotiation=postgres sslcompression=0 sslcertmode=allow sslsni=1 ssl_min_protocol_version=TLSv1.2 gssencmode=prefer krbsrvname=postgres gssdelegation=0 target_session_attrs=any load_balance_hosts=disable dbname=inventorydb';
 
@@ -158,7 +158,7 @@ At this point, primary and replica are set up for failover slots to work.
 So let's create a logical replication slot on the primary next:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@primary:inventorydb> SELECT * FROM pg_create_logical_replication_slot('test_slot', 'test_decoding', false, false, true);
 +-----------+-----------+
@@ -171,7 +171,7 @@ As of Postgres 17, there's a new optional parameter of the `pg_create_logical_re
 On the replica, call `pg_sync_replication_slots()` for synchronizing all failover slots from the primary:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@replica:inventorydb> SELECT pg_sync_replication_slots();
 +---------------------------+
@@ -208,7 +208,7 @@ You could manually call `pg_sync_replication_slots()` repeatedly to synchronize 
 By setting `sync_replication_slots` to `on` on the replica, a synchronization worker will be started, which will propagate the replication state automatically:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@replica:inventorydb> ALTER SYSTEM SET sync_replication_slots = true;
 user@replica:inventorydb> SELECT pg_reload_conf();
@@ -216,7 +216,7 @@ user@replica:inventorydb> SELECT pg_reload_conf();
 Now do some data changes in the primary and consume them from the replication slot:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@primary:inventorydb> UPDATE inventory.customers SET first_name='Sarah' where id = 1001;
 
@@ -238,7 +238,7 @@ If you query `pg_replication_slots` once more, you'll see that the confirmed flu
 To conclude our basic experiments, let's see what happens when we try to consume the replication slot on the replica server:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@replica:inventorydb> SELECT * FROM pg_logical_slot_get_changes('test_slot', NULL, NULL);
 cannot use replication slot "test_slot" for logical decoding
@@ -396,7 +396,7 @@ $ decodable query --name "inventorydb-source" --kind connection --keep-ids | yq 
 In the primary Postgres instance, create the replication slot, configuring it as a failover slot:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@primary:inventorydb> SELECT * FROM pg_create_logical_replication_slot('decodable_', 'pgoutput', false, false, true);
 ----
@@ -420,7 +420,7 @@ Select the `inventorydb__inventory__customers` stream and go to the "Preview" ta
 Do a few data changes in the Postgres session on the primary node:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@primary:inventorydb> UPDATE inventory.customers SET first_name='Saundra' where id = 1001;
 user@primary:inventorydb> UPDATE inventory.customers SET first_name='Samantha' where id = 1001;
@@ -441,7 +441,7 @@ $ docker compose stop postgres_primary
 Go to the database session on the replica and promote it to the primary:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@replica:inventorydb> select pg_promote();
 ----
@@ -449,7 +449,7 @@ At this point, pgbouncer still points to the previous, now defunct primary serve
 Change its configuration in the Docker Compose file so it forwards to the new primary:
 
 
-[source,shell,linenums]
+[source,yaml,linenums]
 ----
    pgbouncer:
      image: edoburu/pgbouncer:latest
@@ -475,14 +475,14 @@ After a little while, it will be in "Running" state again, as the proxy now rout
 The connector now consumes from the replication slot on that new primary server, as you can confirm by doing a few more data changes on that node and examining the data in the Decodable stream preview also by verifying that the replication slot now is in Active state:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 user@replica:inventorydb> INSERT INTO inventory.customers VALUES (default, 'Rudy', 'Replica', 'rudy@example.com', FALSE)
 ----
 If you retrieve the state of the replication state again, using the same query as above, you'll also see that it is marked as `active` now:
 
 
-[source,shell,linenums]
+[source,sql,linenums]
 ----
 +----------+--------------------+-----------+--------+----------+-------------+----------+--------+---------------------+
 | node     | slot_name          | slot_type | active | plugin   | database    | failover | synced | confirmed_flush_lsn |
