--- a/content/blog/change-data-capture-breaks-encapsulation-does-it-though.asciidoc
+++ b/content/blog/change-data-capture-breaks-encapsulation-does-it-though.asciidoc
@@ -21,7 +21,7 @@ endif::[]
 
 _This post originally appeared on the link:https://www.decodable.co/blog/change-data-capture-breaks-encapsulation-does-it-though[Decodable blog]. All rights reserved._
 
-Having worked on Debezium--an open-source platform for Change Data Capture (CDC)--for several years, one concern I've heard repeatedly is this: aren't you breaking the encapsulation of your application when you expose change event feeds directly from your database?
+Having worked on Debezium--an open-source platform for Change Data Capture (CDC){emdash}for several years, one concern I've heard repeatedly is this: aren't you breaking the encapsulation of your application when you expose change event feeds directly from your database?
 After all, CDC exposes your internal persistent data model to the outside world, which may have unintended consequences, e.g.
 in terms of data exposure but also when it comes to changes to the schema of your data, which may break downstream consumers.
 
