--- a/content/blog/hardwood-new-parser-for-apache-parquet.asciidoc
+++ b/content/blog/hardwood-new-parser-for-apache-parquet.asciidoc
@@ -71,7 +71,7 @@ try (ParquetFileReader fileReader = ParquetFileReader.open(myParquetFile);
     long id = rowReader.getLong("id");
 
     // ... Or by index
-    String name = rowReader.getString("name");
+    String name = rowReader.getString(1);
 
     // Logical types are automatically converted
     LocalDate birthDate = rowReader.getDate("birth_date");
