--- a/content/projects/index.asciidoc
+++ b/content/projects/index.asciidoc
@@ -36,7 +36,7 @@ allowing to examine the state of the Connect cluster and individual connectors, 
 It is based on Quarkus and provided as a native binary for Linux, macOS, and Windows via GraalVM.
 
 Persistasaurus::
-https://github.com/gunnarmorling/persistasaurus[Persistasaurus] is a PoC durable execution engine backed by SQLite.
+https://github.com/gunnarmorling/persistasaurus[Persistasaurus] is a PoC of a durable execution engine backed by SQLite.
 It allows to define multi-step workflows in Java using a simple annotation-based programming model,
 with SQLite used for persisting the execution log.
 If a flow gets interrupted, for instance due to a machine failure, Persistasaurus can resume it from the last successfully executed step.
